fix link main page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="wrapper">
 
                 
-                <a class="card_link" href="./tip-calc/inedx.html">
+                <a class="card_link" href="./tip-calc/index.html">
 
                     <div class="card">
 
