--- a/tip-calc/index.html
+++ b/tip-calc/index.html
@@ -38,7 +38,7 @@
 
                 <a class="source_link" href="https://github.com/ShakhaAbdullaev/JavaScript100/tree/main/tip-calc" target="_blank">Source Code</a>
 
-                <a class="back_link" href="../index.html">Back</a>
+                <a class="back_link" href="../index.html">Back</a>a
 
             </div>
 
