--- a/temp-calc/temperature.html
+++ b/temp-calc/temperature.html
@@ -23,9 +23,9 @@
 
                 <br>
 
-                <p id="Fahrenheit">Fahrenheit:</p>
+                <p id="fahrenheit">Fahrenheit:</p>
 
-                <input type="number" id="fahr-input" placeholder="Enter a temperature">
+                <input type="number" id="fahrenheit-input" placeholder="Enter a temperature">
 
                 <br>
 
@@ -34,6 +34,8 @@
                 <input type="number" id="kelvin-input" placeholder="Enter a temperature">
 
             </div>
+
+            <button id="clear">Clear</button>
 
         </div>
 
