css done temp conv

--- a/temp-calc/temperature.html
+++ b/temp-calc/temperature.html
@@ -17,21 +17,31 @@
 
             <div class="temp-input">
 
-                <p id="celsius">Celsius:</p>
+                <div class="celsius_box">
 
-                <input type="number" required id="celsius-input" placeholder="Enter a temperature">
+                    <p id="celsius">Celsius:</p>
 
-                <br>
+                    <input type="number" required id="celsius-input" placeholder="Enter a temperature">
 
-                <p id="fahrenheit">Fahrenheit:</p>
+                </div>
 
-                <input type="number" id="fahrenheit-input" placeholder="Enter a temperature">
 
-                <br>
+                <div class="fahr_box">
 
-                <p id="kelvin">Kelvin:</p>
+                    <p id="fahrenheit">Fahrenheit:</p>
 
-                <input type="number" id="kelvin-input" placeholder="Enter a temperature">
+                    <input type="number" id="fahrenheit-input" placeholder="Enter a temperature">
+
+                </div>
+
+
+                <div class="kelv_box">
+
+                    <p id="kelvin">Kelvin:</p>
+
+                    <input type="number" id="kelvin-input" placeholder="Enter a temperature">
+
+                </div>
 
             </div>
 
