final edit done

--- a/temp-calc/temperature.html
+++ b/temp-calc/temperature.html
@@ -47,7 +47,9 @@
 
             <button id="clear">Clear</button>
 
+            <a class="back" href="../index.html">Back</a>
         </div>
+        
 
     </div>
 
