fix index pages on pagination & book api

--- a/book_api/index.html
+++ b/book_api/index.html
@@ -29,6 +29,10 @@
 
         </div>
 
+        <div class="backBtn">
+            <a class="btn_link" href="../index.html">Back</a>
+        </div>
+
         <div class="lds-roller lds-hidden"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 
     </main>
