fix weather links

--- a/weather_api/index.html
+++ b/weather_api/index.html
@@ -98,8 +98,14 @@
 
         </div>
 
+        
     </div>
     
+    <div class="backBtnblck">
+
+        <a href="../index.html">Back</a>
+
+    </div>
 
 
     <script src="./script.js"></script>
