--- a/weather_api/index.html
+++ b/weather_api/index.html
@@ -15,9 +15,9 @@
 
             <i class='bx bxs-map'></i>
 
-            <input type="text" placeholder="Enter your location...">
+            <input id="input" type="text" placeholder="Enter your location...">
 
-            <button class="search"><i class='bx bx-search'></i></button>
+            <button id="search" class="search"><i class='bx bx-search'></i></button>
 
         </div>
 
